syntax = "proto3";

package post;

option go_package='./pb';

message Post {
  string id = 1;
  int64 createAt = 2;
  int64 updateAt = 3;
  string title = 5;
  string text = 6;
  string coverUrl = 7;
  repeated string tags = 8;
  string userId = 9;
  bool isOfficial = 10;
}

// create a post
message CreatePostReq {
  string title = 2;
  string text = 3;
  string coverUrl = 4;
  repeated string tags = 5;
  string userId = 6;
}

message CreatePostResp {
  string postId = 1;
}

// retrieve a post
message RetrievePostReq {
  string postId = 1;
}

message RetrievePostResp {
  Post post = 1;
}

//update a post
message UpdatePostReq {
  string id = 1;
  string title = 3;
  string text = 4;
  string coverUrl = 5;
  repeated string tags = 6;
}

message UpdatePostResp {
}

// delete a post
message DeletePostReq {
  string id = 1;
}

message DeletePostResp {
}

// list posts
message ListPostReq {
  optional int64 offset = 1;
  optional int64 limit = 2;
  optional bool backward = 3;
  optional string lastToken = 4;
  message SearchField {
    optional string text = 1;
    optional string title = 2;
    optional string tag = 3;
  }
  oneof SearchOptions {
    string allFieldsKey = 5;
    SearchField multiFieldsKey = 6;
  }
  optional bool onlyOfficial = 7;
  optional string onlyUserId = 8;
}

message ListPostResp {
  repeated Post posts = 1;
  int64 total = 2;
  string token = 3;
}

message SetOfficialReq {
  string postId = 1;
  bool isRemove = 2;
}

message SetOfficialResp {
}

service post_rpc {
  rpc CreatePost(CreatePostReq) returns(CreatePostResp);
  rpc RetrievePost(RetrievePostReq) returns(RetrievePostResp);
  rpc UpdatePost(UpdatePostReq) returns(UpdatePostResp);
  rpc DeletePost(DeletePostReq) returns(DeletePostResp);
  rpc ListPost(ListPostReq) returns(ListPostResp);
  rpc SetOfficial(SetOfficialReq) returns(SetOfficialResp);
}